--- a/home.html
+++ b/home.html
@@ -13,12 +13,12 @@
     <div class="container">
         <header class="Cabecalho-Page"> 
             <h1> Vinicola Agnello </h1>
+
             <nav>   <!-- Estrutura de navegação -->
                 <ul>
                     <li><a href="#vinhos">Vinhos</a></li>
-                    <li><a href="">Link</a></li>
-                    <li><a href="">Link</a></li>
-                    <li><a href="">Link</a></li>
+                    <li><a href="">--</a></li>
+                    <li><a href="">Perfil</a></li>
                 </ul>
             </nav>
         </header> 
@@ -79,6 +79,12 @@
                     </div> 
             </div>
     </section>
+
+
+    <footer> 
+        <h2> Formulário de Contato</h2>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
