--- a/home.html
+++ b/home.html
@@ -32,50 +32,50 @@
 
     <!-- Cards de Vinhos -->
     <section class="vinhos" id="vinhos"> 
-        <h2> Vinhos </h2> 
+        <h2> Conheça nossos Vinhos mais vendidos: </h2> 
         
             <div class="vinhos-classes">  <!-- Container Flexivél -->
  
                 <!-- 1. Vinho -->
-                <div class="vinhos-item"> 
+                <div class="vinhos-item" data-desc="Um vinho encantador e intrigante que desperta os sentidos com sua profunda complexidade aromática e notas sedutoras de frutas maduras, combinadas harmoniosamente com uma elegante estrutura tânica."> 
                         <img src="./img/garrafas/vinho01.png" alt="--">
-                        <h3> -- </h3>
+                        <h3> Vinho Neugebauer </h3>
                         <p> R$ 240.00 </p>
                 </div>
 
                 <!-- 2. Vinho -->
-                <div class="vinhos-item"> 
+                <div class="vinhos-item" data-desc="Um vinho que brilha com uma luminosidade única, revelando uma paleta de aromas vivazes e cativantes. Sua suavidade sedosa e sabor exuberante criam uma jornada sensorial que encanta e inspira."> 
                     <img src="./img/garrafas/vinho02.png" alt="--">
-                    <h3> -- </h3>
+                    <h3> Miragem de Outono </h3>
                     <p> R$ 300.00 </p>
                 </div>
 
                 <!-- 3. Vinho -->
-                <div class="vinhos-item"> 
+                <div class="vinhos-item" data-desc="Um vinho delicado que acaricia o paladar com sua suavidade refrescante e notas sutis de frutas frescas. "> 
                     <img src="./img/garrafas/vinho03.png" alt="--">
-                    <h3>--</h3>
-                    <p> R$ 40.00 </p>
+                    <h3> Sangue de Carmilla </h3>
+                    <p> R$ 290.00 </p>
                 </div>
 
                 <!-- 4. Vinho -->
-                    <div class="vinhos-item"> 
+                    <div class="vinhos-item" data-desc="Um vinho que desencadeia uma tempestade de sabores audaciosos e intensos, com uma profundidade que desafia os sentidos."> 
                         <img src="./img/garrafas/vinho04.png" alt="--">
-                            <h3> -- </h3>
+                            <h3> Xamã </h3>
                             <p> R$ 540.00 </p>
                     </div>
 
                 <!-- 5. Vinho -->
-                    <div class="vinhos-item"> 
+                    <div class="vinhos-item" data-desc="Com sua pureza inabalável e caráter marcante, evoca a força e a determinação da deusa grega que lhe empresta o nome.  Seus aromas intensos e sabor robusto são como um convite para uma jornada sensorial"> 
                         <img src="./img/garrafas/vinho05.png" alt="--">
-                        <h3> -- </h3>
-                        <p> R$ 240.00 </p>
+                        <h3> Sinfonia de Artemis </h3>
+                        <p> R$ 190.00 </p>
                     </div>
 
                 <!-- 6. Vinho -->
-                    <div class="vinhos-item"> 
+                    <div class="vinhos-item" data-desc="Um vinho de bravura indomável e caráter inabalável, que desafia o paladar com sua intensidade imponente e robustez inigualável."> 
                         <img src="./img/garrafas/vinho01.png" alt="--">
-                            <h3> -- </h3>
-                            <p> R$ 240.00 </p>
+                            <h3> Possessão </h3>
+                            <p> R$ 450.00 </p>
                     </div> 
             </div>
     </section>
