--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             <p> Agradecemos por ter escolhido a Vinícola Agnello. </p>
     </header>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
