botão de compra feito

--- a/product_page.html
+++ b/product_page.html
@@ -18,10 +18,12 @@
                 
 
 
-                <button id="btncalculator" onclick="calcular()">Adicionar ao carrinho</button>
+                <button id="btncalculator" onclick="calcular()">Calcular preço</button>
     
                 <h2><strong>Resultado:</strong></h2>
                 <h1 id="resultado"></h1>
+
+                <button onClick="comprar()">Comprar</button>
         </div> 
     </div>
     <script src="./js/script.js"></script>
