erros e estilização da página da calculadora arrumados

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
                     <li><a href="#vinhos">Vinhos</a></li>
                     <li><a href="">Perfil</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><button type="button" id="Entrar" onclick="Login()">Entrar</button></li>
+                    <li><button type="button" id="Entrar" class="btn_login" onclick="Login()">Entrar</button></li>
                 </ul>
             </nav>
         </header> 
@@ -129,7 +129,7 @@
                     <label for="mensagem">Mensagem:</label>
                     <textarea id="mensagem" name="mensagem" required> </textarea>
                     
-                        <button type="submit">Enviar</button>
+                        <button type="submit" onClick="mesagem_enviada()">Enviar</button>
                     </form>
                 </div>
             </footer>
